package NBlenderOnlineLearning.NProto;

import "kernel/blender/online_learning/protos/model.proto";
import "mapreduce/yt/interface/protos/extension.proto";

option go_package = "a.yandex-team.ru/kernel/blender/online_learning/protos";
message TTrainParams {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // most frequently used params should be has tag from 1 to 15
    optional uint32 BatchSize = 1 [default = 300];
    optional float LearningRate = 2 [default = 1.0];
    optional float RegValue = 3 [default = 0.0];

    optional TModel Model = 4;  //  for passing model params and optionally init values

    // less-commonly used
    optional uint32 Version = 16 [default = 0];  // for reset model training
    optional uint32 MaxBatchTimeWidth = 17;
    optional float RandomInitRange = 18 [default=0.05];
    optional uint32 EvaluateWindowSize = 19 [default = 3000];
    optional bool IsMinorUpdate = 20 [default = false];  // deprecated, just change train params
    optional uint32 RandomSeed = 21;

    // randomization policy
}
